# mlops-model-production

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  locustfile.py  main.py  nginx.conf  pyproject.toml
.github/workflows/: cd.yaml  deploy.yml
src/api/: Dockerfile  main.py  security.py
src/models/: MTCNN.py
src/ui/: Dockerfile  app.py  index.html
