[project]
name = "mlops-model-production"
version = "0.1.0"
description = "MLops Model Production Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "fastapi[standard]>=0.121.1",
    "matplotlib>=3.10.7",
    "pydantic>=2.12.4",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
