[project]
name = "mlops-model-production"
version = "0.1.0"
description = "MLops Model Production Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.1",
    "fastapi[standard]>=0.121.1",
    "matplotlib>=3.10.7",
    "mtcnn>=1.0.0",
    "pydantic>=2.12.4",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
]
